[gd_scene load_steps=8 format=3 uid="uid://dj1oetaotmy4l"]

[ext_resource type="Script" path="res://levels/word based levels/levels-2ndmenu.gd" id="1_a6ycl"]
[ext_resource type="Texture2D" uid="uid://3wig5pp5fuin" path="res://assets/backgrounds/L-2.png" id="1_hylq2"]
[ext_resource type="FontFile" uid="uid://dnmqdhvak5ibj" path="res://Jersey10Charted-Regular.ttf" id="2_k8ss4"]
[ext_resource type="FontFile" uid="uid://bu3nvaxmch4wf" path="res://Jersey10-Regular.ttf" id="3_qikpv"]
[ext_resource type="StyleBox" uid="uid://bn1gowgrgluvk" path="res://levels/word based levels/MENU_G-HOVER.tres" id="4_wftv4"]
[ext_resource type="StyleBox" uid="uid://cjkfpmu1sj33m" path="res://levels/word based levels/MENU_G-PRES.tres" id="5_bqwt3"]
[ext_resource type="StyleBox" uid="uid://dwsowx1t5twmd" path="res://levels/word based levels/MENU_G.tres" id="6_qcwkk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a6ycl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -231.0
offset_right = 272.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hylq2")
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.52739, 0.14814, 0.233467, 1)
theme_override_colors/font_shadow_color = Color(0.833269, 0.961322, 0.994021, 1)
theme_override_colors/font_outline_color = Color(0.955243, 0.943805, 0.664833, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_k8ss4")
theme_override_font_sizes/font_size = 120
text = "Typing Quest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="LETTER" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_qikpv")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("4_wftv4")
theme_override_styles/pressed = ExtResource("5_bqwt3")
theme_override_styles/normal = ExtResource("6_qcwkk")
text = "LETTER"

[node name="WORD" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_qikpv")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("4_wftv4")
theme_override_styles/pressed = ExtResource("5_bqwt3")
theme_override_styles/normal = ExtResource("6_qcwkk")
text = "WORD"

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_qikpv")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("4_wftv4")
theme_override_styles/pressed = ExtResource("5_bqwt3")
theme_override_styles/normal = ExtResource("6_qcwkk")
text = "EXIT"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/LETTER" to="." method="_on_letter_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/WORD" to="." method="_on_word_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
